fixed mobile alignmnt in user-home

--- a/user/css/record.css
+++ b/user/css/record.css
@@ -108,5 +108,6 @@ img {
   }
   .card {
     width: 100%;
+    text-align: center;
   }
 }
